--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 CLICKABLE IMAGES - HOTSPOTTING IMAGES IN HTML 
 
-<img src="spider-verse">
+<img src="spider-verse.jpg">
 <area shape="rect" cooeds="20,70,170,120" alt="andrew garfield" href="https://www.google.com"/ >
 <area shape ="rect" coords="90,140,240,190" alt="tobey"  href="https://www.google.com"/>
 <area shape ="rect" coords="160,200,300,260" alt="tobey"  href="https://www.google.com"/>
