--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <H1>CLICKABLE IMAGES - HOTSPOTTING IMAGES IN HTML<H1> 
 
 <img src="spider-verse.jpg" alt="spider-verse" usemap="s"/>
-<map name="s/>
+<map name="s"/>
 <area shape="rect" cooeds="20,70,170,120" alt="andrew garfield" href="https://www.google.com"/ >
 <area shape ="rect" coords="90,140,240,190" alt="tobey"  href="https://www.google.com"/>
 <area shape ="rect" coords="160,200,300,260" alt="tobey"  href="https://www.google.com"/>
