--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <p style="text-align : senter; font-size : 30 px; color:red;"> 
 
-<H1>CLICKABLE IMAGES - HOTSPOTTING IMAGES IN HTML<H1> 
+<H1>CLICKABLE IMAGES - HOTSPOTTING IMAGES IN HTML</H1> 
 
 <img src="spider-verse.jpg" alt="spider-verse" usemap="s"/>
 <map name="s"/>
