--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lan="en">
+<html lang="en">
 
 <head>
 <meta charset="utf-8" />
@@ -8,15 +8,15 @@
 </head>
 <body style="margin : 1 auto ; width:780px;">
 
-<p style="text-align : senter; font-size : 30 px; color:red;"> 
+<p style="text-align : center; font-size : 30 px; color:red;"> 
 
-<H1>CLICKABLE IMAGES - HOTSPOTTING IMAGES IN HTML</H1> 
+CLICKABLE IMAGES - HOTSPOTTING IMAGES IN HTML
 
-<img src="spider-verse.jpg" alt="spider-verse" usemap="s"/>
-<map name="s"/>
+<img src="spider-verse.jpg" alt="spider-verse" usemap="#s"/>
+<map name="s">
 <area shape="rect" cooeds="20,70,170,120" alt="andrew garfield" href="https://www.google.com"/ >
 <area shape ="rect" coords="90,140,240,190" alt="tobey"  href="https://www.google.com"/>
-<area shape ="rect" coords="160,200,300,260" alt="tobey"  href="https://www.google.com"/>
+<area shape ="rect" coords="160,2000,3000,2600" alt="tobey"  href="https://www.google.com"/>
 
 </map>
 </body>
