--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ CLICKABLE IMAGES - HOTSPOTTING IMAGES IN HTML
 
 <img src="spider-verse.jpg" alt="spider-verse" usemap="#s"/>
 <map name="s">
-<area shape="rect" coords="97,163,327,710" alt="andrew garfield" href="https://www.google.com"/ >
-<area shape ="rect" coords="543,75,870,725" alt="tobey"  href="https://www.google.com"/>
-<area shape ="rect" coords="950,250,1200,720" alt="tobey"  href="https://www.google.com"/>
+<area shape="rect" coords="97,163,327,710" alt="andrew garfield" href="andrew-gar.html"/ >
+<area shape ="rect" coords="543,75,870,725" alt="tobey"  href="tobey.html"/>
+<area shape ="rect" coords="950,250,1200,720" alt="tobey"  href="tom.html"/>
 
 </map>
 </body>
