--- a/andrew-gar.html
+++ b/andrew-gar.html
@@ -4,11 +4,11 @@
 
 <body>
   <h4>
-    <p>
-      Actor : Andrew Garfield 
-      Movies : The Amazing Spider Man (2012)
-               The Amazing Spider Man 2  (2014)
-      <img src="and.jpg" />
+    <p><h1>
+      Actor : Andrew Garfield <br><br>
+      Movies : The Amazing Spider Man (2012)<br><br>
+               The Amazing Spider Man 2  (2014)<br><br> <br><br>
+      <img src="and.jpeg" />
     </body>
   </html>
 
