--- a/tobey.html
+++ b/tobey.html
@@ -4,11 +4,11 @@
 
 <body>
   <h4>
-    <p>
-      Actor : Tobey Maguire 
-      Movies : Spider Man (2002)
-               Spider Man 2  (2004)
-               Spider Man 3  (2007)
+    <p> <h1>
+      Actor : Tobey Maguire <br><br>
+      Movies : Spider Man (2002)<br><br>
+               Spider Man 2  (2004)<br><br>
+               Spider Man 3  (2007)<br><br><br><br>
       <img src="tob.jpg" />
     </body>
   </html>
