--- a/tom.html
+++ b/tom.html
@@ -4,13 +4,13 @@
 
 <body>
   <h4>
-    <p>
-      Actor : Tom Holland 
-      Movies : Captain America : Civil War (2016)
-               Spider Man - Homecoming  (2017)
-               Infinity war (2018)
-               Endgame (2019)
-               Far From Home (2019)
+    <p><h1>
+      Actor : Tom Holland <br><br>
+      Movies : Captain America : Civil War (2016)<br><br>
+               Spider Man - Homecoming  (2017)<br><br>
+               Infinity war (2018)<br><br>
+               Endgame (2019)<br><br>
+               Far From Home (2019)<br><br><br><br>
                
       <img src="tom.jpg" />
     </body>
